control/plasma_cf90.F90


      interface
         function PLASMA_chegvd_c(itype,jobz,uplo,N,A,LDA,B,LDB,W,descT,Q,LDQ) &
          & bind(c, name='PLASMA_chegvd')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_chegvd_c
            integer(kind=c_int), value :: itype
            integer(kind=c_int), value :: jobz
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            type(c_ptr), value :: B
            integer(kind=c_int), value :: LDB
            type(c_ptr), value :: W
            type(c_ptr), value :: descT
            type(c_ptr), value :: Q
            integer(kind=c_int), value :: LDQ
          end function PLASMA_chegvd_c
      end interface

#if defined(PRECISION_z) || defined(PRECISION_c)
      interface
         function PLASMA_chemm_c(side,uplo,M,N,alpha,A,LDA,B,LDB,beta,C,LDC) &
          & bind(c, name='PLASMA_chemm')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_chemm_c
            integer(kind=c_int), value :: side
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: M
            integer(kind=c_int), value :: N
            complex(kind=c_float_complex), value :: alpha
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            type(c_ptr), value :: B
            integer(kind=c_int), value :: LDB
            complex(kind=c_float_complex), value :: beta
            type(c_ptr), value :: C
            integer(kind=c_int), value :: LDC
          end function PLASMA_chemm_c
      end interface
#endif

#if defined(PRECISION_z) || defined(PRECISION_c)
      interface
         function PLASMA_cher2k_c(uplo,trans,N,K,alpha,A,LDA,B,LDB,beta,C,LDC) &
          & bind(c, name='PLASMA_cher2k')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_cher2k_c
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: trans
            integer(kind=c_int), value :: N
            integer(kind=c_int), value :: K
            complex(kind=c_float_complex), value :: alpha
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            type(c_ptr), value :: B
            integer(kind=c_int), value :: LDB
            real(kind=c_float), value :: beta
            type(c_ptr), value :: C
            integer(kind=c_int), value :: LDC
          end function PLASMA_cher2k_c
      end interface
#endif

#if defined(PRECISION_z) || defined(PRECISION_c)
      interface
         function PLASMA_cherk_c(uplo,trans,N,K,alpha,A,LDA,beta,C,LDC) &
          & bind(c, name='PLASMA_cherk')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_cherk_c
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: trans
            integer(kind=c_int), value :: N
            integer(kind=c_int), value :: K
            real(kind=c_float), value :: alpha
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            real(kind=c_float), value :: beta
            type(c_ptr), value :: C
            integer(kind=c_int), value :: LDC
          end function PLASMA_cherk_c
      end interface
#endif

      interface
         function PLASMA_chetrd_c(jobz,uplo,N,A,LDA,D,E,descT,Q,LDQ) &
          & bind(c, name='PLASMA_chetrd')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_chetrd_c
            integer(kind=c_int), value :: jobz
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            type(c_ptr), value :: D
            type(c_ptr), value :: E
            type(c_ptr), value :: descT
            type(c_ptr), value :: Q
            integer(kind=c_int), value :: LDQ
          end function PLASMA_chetrd_c
      end interface

      interface
         function PLASMA_clacpy_c(uplo,M,N,A,LDA,B,LDB) &
          & bind(c, name='PLASMA_clacpy')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_clacpy_c
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: M
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            type(c_ptr), value :: B
            integer(kind=c_int), value :: LDB
          end function PLASMA_clacpy_c
      end interface

      interface
         function PLASMA_clange_c(norm,M,N,A,LDA) &
          & bind(c, name='PLASMA_clange')
            use iso_c_binding
            implicit none
            real(kind=c_float) :: PLASMA_clange_c
            integer(kind=c_int), value :: norm
            integer(kind=c_int), value :: M
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
          end function PLASMA_clange_c
      end interface

#if defined(PRECISION_z) || defined(PRECISION_c)
      interface
         function PLASMA_clanhe_c(norm,uplo,N,A,LDA) &
          & bind(c, name='PLASMA_clanhe')
            use iso_c_binding
            implicit none
            real(kind=c_float) :: PLASMA_clanhe_c
            integer(kind=c_int), value :: norm
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
          end function PLASMA_clanhe_c
      end interface
#endif

      interface
         function PLASMA_clansy_c(norm,uplo,N,A,LDA) &
          & bind(c, name='PLASMA_clansy')
            use iso_c_binding
            implicit none
            real(kind=c_float) :: PLASMA_clansy_c
            integer(kind=c_int), value :: norm
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
          end function PLASMA_clansy_c
      end interface

      interface
         function PLASMA_clantr_c(norm,uplo,diag,M,N,A,LDA) &
          & bind(c, name='PLASMA_clantr')
            use iso_c_binding
            implicit none
            real(kind=c_float) :: PLASMA_clantr_c
            integer(kind=c_int), value :: norm
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: diag
            integer(kind=c_int), value :: M
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
          end function PLASMA_clantr_c
      end interface

      interface
         function PLASMA_claset_c(uplo,M,N,alpha,beta,A,LDA) &
          & bind(c, name='PLASMA_claset')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_claset_c
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: M
            integer(kind=c_int), value :: N
            complex(kind=c_float_complex), value :: alpha
            complex(kind=c_float_complex), value :: beta
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
          end function PLASMA_claset_c
      end interface

      interface
         function PLASMA_claswp_c(N,A,LDA,K1,K2,IPIV,INCX) &
          & bind(c, name='PLASMA_claswp')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_claswp_c
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            integer(kind=c_int), value :: K1
            integer(kind=c_int), value :: K2
            type(c_ptr), value :: IPIV
            integer(kind=c_int), value :: INCX
          end function PLASMA_claswp_c
      end interface

      interface
         function PLASMA_claswpc_c(N,A,LDA,K1,K2,IPIV,INCX) &
          & bind(c, name='PLASMA_claswpc')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_claswpc_c
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            integer(kind=c_int), value :: K1
            integer(kind=c_int), value :: K2
            type(c_ptr), value :: IPIV
            integer(kind=c_int), value :: INCX
          end function PLASMA_claswpc_c
      end interface

      interface
         function PLASMA_clauum_c(uplo,N,A,LDA) &
          & bind(c, name='PLASMA_clauum')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_clauum_c
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
          end function PLASMA_clauum_c
      end interface

#if defined(PRECISION_z) || defined(PRECISION_c)
      interface
         function PLASMA_cplghe_c(bump,N,A,LDA,seed) &
          & bind(c, name='PLASMA_cplghe')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_cplghe_c
            real(kind=c_float), value :: bump
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            integer(kind=c_long_long), value :: seed
          end function PLASMA_cplghe_c
      end interface
#endif

      interface
         function PLASMA_cplgsy_c(bump,N,A,LDA,seed) &
          & bind(c, name='PLASMA_cplgsy')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_cplgsy_c
            complex(kind=c_float_complex), value :: bump
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            integer(kind=c_long_long), value :: seed
          end function PLASMA_cplgsy_c
      end interface

      interface
         function PLASMA_cplrnt_c(M,N,A,LDA,seed) &
          & bind(c, name='PLASMA_cplrnt')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_cplrnt_c
            integer(kind=c_int), value :: M
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            integer(kind=c_long_long), value :: seed
          end function PLASMA_cplrnt_c
      end interface

      interface
         function PLASMA_cpltmg_c(mtxtype,M,N,A,LDA,seed) &
          & bind(c, name='PLASMA_cpltmg')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_cpltmg_c
            integer(kind=c_int), value :: mtxtype
            integer(kind=c_int), value :: M
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            integer(kind=c_long_long), value :: seed
          end function PLASMA_cpltmg_c
      end interface

      interface
         function PLASMA_cpocon_c(uplo,N,A,LDA,anorm,rcond) &
          & bind(c, name='PLASMA_cpocon')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_cpocon_c
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: N
            type(c_ptr), value :: A
            integer(kind=c_int), value :: LDA
            real(kind=c_float), value :: anorm
            type(c_ptr), value :: rcond
          end function PLASMA_cpocon_c
      end interface
